--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,22 +18,22 @@ services:
   #  container_name: Python
   #  image: "python:bullseye"
   #  restart: unless-stopped
-  pihole:
-    container_name: "pihole"
-    image: "pihole/pihole:latest"
+#  pihole:
+#    container_name: "pihole"
+*    image: "pihole/pihole:latest"
     # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
     ports:
     # - "53:53/tcp"
     # - "53:53/udp"
      #- "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
       - "85:80/tcp"
-    environment:
-      TZ: 'Europe/London'
-      PIHOLE_DNS_: "127.0.0.0#5335"
-      WEBTHEME: "default-darker"
-    # Volumes store your data between container upgrades
-    volumes:
-      - './etc-pihole:/etc/pihole'
-      - './etc-dnsmasq.d:/etc/dnsmasq.d'
-    #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+#    environment:
+#      TZ: 'Europe/London'
+#      PIHOLE_DNS_: "127.0.0.0#5335"
+#      WEBTHEME: "default-darker"
+    # Volumes store your data between container #upgrades
+#    volumes:
+#      - './etc-pihole:/etc/pihole'
+#      - './etc-dnsmasq.d:/etc/dnsmasq.d'
+    #  https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
     restart: unless-stopped
